--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Electron</title>
+    <title>Gitmoji</title>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'"
+      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; style-src-elem https://cdn.jsdelivr.net/ 'unsafe-inline'; font-src https://cdn.jsdelivr.net/ 'unsafe-inline' 'self' 'unsafe-inline'"
     />
   </head>
 
